Add layout configuration

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -46,5 +46,8 @@ $weights-map: (
   "bold": $text-weight-bold,
 );
 
+// Layouts
+$layout-max-width: 120rem;
+
 // Misc
 $sides: top right bottom left;
