--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 // Transitions
 @mixin transition($args...) {
   -webkit-transition: $args;
@@ -5,4 +7,20 @@
   -ms-transition: $args;
   -o-transition: $args;
   transition: $args;
+}
+
+// Layouts
+@mixin layout($variant: "sidebar") {
+  @if $variant == "full" {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 3rem;
+  }
+  @if $variant == "sidebar" {
+    padding: 0 3rem;
+    width: 100%;
+    max-width: $layout-max-width;
+  }
 }
