Add border-radius variable

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -49,5 +49,8 @@ $weights-map: (
 // Layouts
 $layout-max-width: 120rem;
 
+// Global Border Radius
+$border-radius: 0.7rem;
+
 // Misc
 $sides: top right bottom left;
