Change Button component color

--- a/src/components/commons/Button/button.scss
+++ b/src/components/commons/Button/button.scss
@@ -4,7 +4,7 @@
   height: 4rem;
   color: $color-absence;
   border-radius: $border-radius;
-  background-color: $color-primary;
+  background-color: $color-alternative;
   padding: 0 3rem;
 
   &:disabled {
