--- a/src/components/PhotoDetails/photoDetails.scss
+++ b/src/components/PhotoDetails/photoDetails.scss
@@ -8,6 +8,10 @@
     border-radius: $border-radius;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 
+    .lazyload-wrapper {
+      height: 100%;
+    }
+
     img {
       vertical-align: bottom;
       object-fit: cover;
