Use css variables in sass variables

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,14 +1,14 @@
 // Colors
-$color-primary: #ff3300;
-$color-alternative: #3366cc;
-$color-secondary: #999;
-$color-divider: #dedede;
-$color-absence: #fff;
-$color-lighter: #f4f4f4;
-$color-dark-lighter: #454545;
-$color-full: #000;
-$color-error: #ff3300;
-$color-success: limegreen;
+$color-primary: var(--color-primary);
+$color-alternative: var(--color-alternative);
+$color-secondary: var(--color-secondary);
+$color-divider: var(--color-divider);
+$color-absence: var(--color-absence);
+$color-lighter: var(--color-lighter);
+$color-dark-lighter: var(--color-dark-lighter);
+$color-full: var(--color-full);
+$color-error: var(--color-error);
+$color-success: var(--color-success);
 $colors-map: (
   "primary": $color-primary,
   "alternative": $color-alternative,
